src/dts/tests/functions/functions.exp
Error: functions.js:2
  2: var x: C = f (5);
                ^^^^^ function call
  2: var x: C = f (5);
                ^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  1: declare function f(num: number, str: string): C;
                                          ^^^^^^ string. See lib: declarations/functions.js:1

Error: functions.js:3
  3: var y: string = f(1, "test");
                     ^^^^^^^^^^^^ C. This type is incompatible with
  3: var y: string = f(1, "test");
            ^^^^^^ string


Found 2 errors
